--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,29 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src"
+    ],
     "java.project.outputPath": "bin",
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar"
-    ]
-    
+    "java.project.referencedLibraries": {
+        "include": [
+            "lib/**/*.jar",
+            "c:\\Cesurmon\\lib\\libjavafx.base.jar",
+            "c:\\Cesurmon\\lib\\javafx.controls.jar",
+            "c:\\Cesurmon\\lib\\javafx.fxml.jar",
+            "c:\\Cesurmon\\lib\\javafx.graphics.jar",
+            "c:\\Cesurmon\\lib\\javafx.media.jar",
+            "c:\\Cesurmon\\lib\\javafx.swing.jar",
+            "c:\\Cesurmon\\lib\\javafx.web.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.base.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.controls.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.fxml.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.graphics.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
+        ],
+        "exclude": [
+            "c:\\Cesurmon\\lib\\javafx-swt.jar"
+        ]
+    }
 }
