--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,24 +6,24 @@
     "java.project.referencedLibraries": {
         "include": [
             "lib/**/*.jar",
-            "c:\\Cesurmon\\lib\\libjavafx.base.jar",
-            "c:\\Cesurmon\\lib\\javafx.controls.jar",
-            "c:\\Cesurmon\\lib\\javafx.fxml.jar",
-            "c:\\Cesurmon\\lib\\javafx.graphics.jar",
-            "c:\\Cesurmon\\lib\\javafx.media.jar",
-            "c:\\Cesurmon\\lib\\javafx.swing.jar",
-            "c:\\Cesurmon\\lib\\javafx.web.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.base.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.controls.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.fxml.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.graphics.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
-            "c:\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
+            "C:/Cesurmon/lib/libjavafx.base.jar",
+            "C:/Cesurmon/lib/javafx.controls.jar",
+            "C:/Cesurmon/lib/javafx.fxml.jar",
+            "C:/Cesurmon/lib/javafx.graphics.jar",
+            "C:/Cesurmon/lib/javafx.media.jar",
+            "C:/Cesurmon/lib/javafx.swing.jar",
+            "C:/Cesurmon/lib/javafx.web.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.base.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.controls.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.fxml.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.graphics.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.swing.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.web.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx-swt.jar"
         ],
         "exclude": [
-            "c:\\Cesurmon\\lib\\javafx-swt.jar"
+            "C:/Cesurmon/lib/javafx-swt.jar",
+            "C:/javafx-sdk-18.0.1/lib/javafx.media.jar"
         ]
     }
 }
