--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,15 @@
             "C:/javafx-sdk-18.0.1/lib/javafx.graphics.jar",
             "C:/javafx-sdk-18.0.1/lib/javafx.swing.jar",
             "C:/javafx-sdk-18.0.1/lib/javafx.web.jar",
-            "C:/javafx-sdk-18.0.1/lib/javafx-swt.jar"
+            "C:/javafx-sdk-18.0.1/lib/javafx-swt.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.base.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.controls.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.fxml.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.graphics.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
+            "c:\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
         ],
         "exclude": [
             "C:/Cesurmon/lib/javafx-swt.jar",
